--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,11 @@ dependencies:
   http: ^0.13.4
   provider: ^6.0.2
   intl: ^0.17.0
+  firebase_core: ^1.16.0
+  cloud_firestore: ^3.1.14
+  firebase_auth: ^3.3.17
+  image_picker: ^0.8.5
+  firebase_storage: ^10.2.15
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
